HW 7 done